--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
     "clsx": "^2.1.1",
+    "gsap": "^3.12.5",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@mui/icons-material": "^5.14.18",
+    "@studio-freight/lenis": "^1.0.27",
+    "framer-motion": "^10.16.5",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@types/node": "^20",
